# fnm-ui

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.cargo/: audit.toml
.github/workflows/: ci.yml  release-prepare.yml  release-publish.yml  release.yml
crates/fnm-core/src/: detection.rs  lib.rs  progress.rs  update.rs  version.rs
crates/fnm-platform/src/: paths.rs
crates/fnm-shell/: Cargo.toml
crates/fnm-shell/src/: config.rs  detect.rs  verify.rs
crates/fnm-ui/src/: app.rs  message.rs  settings.rs  state.rs  theme.rs
crates/fnm-ui/src/views/: main_view.rs  onboarding.rs
crates/fnm-ui/src/widgets/: install_modal.rs  toast_container.rs  version_list.rs
crates/versi/: Cargo.toml
crates/versi-backend/: Cargo.toml
crates/versi-backend/src/: error.rs  lib.rs  traits.rs  types.rs
crates/versi-core/: Cargo.toml
crates/versi-core/src/: auto_update.rs  backend.rs  client.rs  detection.rs  install_script.rs  lib.rs  metadata.rs  progress.rs  provider.rs  schedule.rs  update.rs
crates/versi-fnm/: Cargo.toml
crates/versi-fnm/src/: backend.rs  detection.rs  error.rs  lib.rs  provider.rs  update.rs  version.rs
crates/versi-nvm/: Cargo.toml
crates/versi-nvm/src/: backend.rs  client.rs  detection.rs  error.rs  lib.rs  provider.rs  update.rs  version.rs
crates/versi-platform/: Cargo.toml
crates/versi-platform/src/: commands.rs  environment.rs  lib.rs  paths.rs  wsl.rs
crates/versi-shell/: Cargo.toml
crates/versi-shell/src/: config.rs  detect.rs  lib.rs  verify.rs
crates/versi-shell/tests/: config_edits_integration.rs
crates/versi/src/: app.rs  backend_kind.rs  cache.rs  error.rs  logging.rs  main.rs  message.rs  settings.rs  single_instance.rs  state.rs  theme.rs  tray.rs  version_query.rs  windows_window.rs
crates/versi/src/app/: async_helpers.rs  auto_update.rs  bulk_operations.rs  environment.rs  init.rs  mod.rs  onboarding.rs  operations.rs  platform.rs  settings_io.rs  settings_save.rs  shell.rs  tray_handlers.rs  update.rs  versions.rs  window.rs
crates/versi/src/app/platform/: linux.rs  macos.rs  mod.rs  unsupported.rs  windows.rs
crates/versi/src/app/update/: navigation.rs  operations.rs  settings.rs  system.rs
crates/versi/src/app/versions/: cache_save.rs  fetch_handlers.rs  tests.rs  update_checks.rs
crates/versi/src/state/: environment.rs  main.rs  mod.rs  onboarding.rs  operations.rs  ui.rs
crates/versi/src/theme/: mod.rs
crates/versi/src/theme/styles/: badges.rs  buttons.rs  containers.rs  mod.rs
crates/versi/src/views/: about_view.rs  main_view.rs  mod.rs  onboarding.rs  settings_view.rs
crates/versi/src/views/main_view/: banners.rs  context_menu.rs  header.rs  mod.rs  modals.rs  search.rs  tabs.rs
crates/versi/src/widgets/: helpers.rs  install_modal.rs  mod.rs  toast_container.rs  version_list.rs
crates/versi/src/widgets/version_list/: available.rs  filters.rs  group.rs  item.rs  mod.rs
scripts/: install.sh  uninstall.sh
wix/: main.wxs
