[workspace]
resolver = "2"
members = [
    "crates/versi",
    "crates/versi-backend",
    "crates/versi-core",
    "crates/versi-fnm",
    "crates/versi-nvm",
    "crates/versi-shell",
    "crates/versi-platform",
]

[workspace.package]
version = "0.10.1"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/almeidx/versi"

[workspace.dependencies]
tokio = { version = "1.49.0", default-features = false, features = ["rt-multi-thread", "macros", "process", "io-util", "fs", "time", "sync"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
chrono = { version = "0.4.43", default-features = false, features = ["std", "now", "serde"] }
dirs = "6.0"
which = "8.0.0"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json", "stream"] }
open = "5.3.3"
async-trait = "0.1.89"
log = "0.4.29"
simplelog = { version = "0.12.2", default-features = false, features = ["termcolor"] }
zip = { version = "8.1.0", default-features = false, features = ["deflate"] }
tempfile = "3.25.0"
self-replace = "1.5"
futures-util = "0.3.32"
tokio-util = { version = "0.7.18", default-features = false, features = ["rt"] }
sha2 = "0.10.9"
semver = "1.0.27"
fs2 = "0.4.3"
crossbeam-channel = "0.5.15"

[workspace.lints.clippy]
pedantic = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
