[package]
name = "versi-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
chrono.workspace = true
async-trait.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio.workspace = true
