[package]
name = "versi-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
chrono.workspace = true
reqwest.workspace = true
zip.workspace = true
tempfile.workspace = true
log.workspace = true
futures-util.workspace = true
sha2.workspace = true
semver.workspace = true
versi-platform = { path = "../versi-platform" }

[target.'cfg(target_os = "linux")'.dependencies]
self-replace.workspace = true
